Changes anova and vignettes

--- a/Mars/Mars/NAMESPACE
+++ b/Mars/Mars/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,mars)
 S3method(predict,mars)
 S3method(print,mars)
 S3method(summary,mars)
+export(anova.mars)
 export(mars)
 export(mars.control)
 export(plot.mars)
